[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
derive_more = "0.99"
fern = { version = "0.6", features = ["reopen-03"] }
log = "0.4"
libc = "0.2"
cfg-if = "1.0"
chrono = "0.4"
