[package]
name = "guardns"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "guard_dns"
path = "src/main.rs"

[dependencies]
derive_more = { version = "2.1", features = ["display", "error"] }
anyhow = "1.0"
tracing = { version = "0.1", features = ["log"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
log = "0.4"
