[package]
version = "0.1.0"
name = "{{project-name}}"
authors = ["{{authors}}"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "{{project-name}}_bin"
path = "src/main.rs"

[dependencies]
derive_more = { version = "2.1", features = ["display", "error"] }
anyhow = "1.0"
tracing = { version = "0.1", features = ["log"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
log = "0.4"
